<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefsCat_General" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="chkSync"
            android:title="@string/prefsSync_title" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/prefsOnClick_dialogTitle"
            android:entries="@array/OnClick_entries"
            android:entryValues="@array/OnClick_values"
            android:key="lstOnClick"
            android:title="@string/prefsOnClick_title" />

        <EditTextPreference
            android:defaultValue="@string/prefsURL_default"
            android:key="eURL"
            android:title="@string/prefsURL_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefsCat_Info" >
        <Preference
            android:summary="@string/prefsInfo_summary"
            android:title="@string/prefsInfo_Title" />
    </PreferenceCategory>

</PreferenceScreen>